# true-touch

./: README.md
Assets/: HandMaterial.mat
Assets/Prefabs/: Finger.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: BluetoothClient.cs  CameraController.cs  Finger.cs  FingerSegment.cs  FingerUpper.cs  IncreaseRange.cs  ReduceRange.cs
ProjectSettings/: ProjectSettings.asset
bluetooth_mitm/: Cargo.toml
bluetooth_mitm/src/: bluetooth.rs  device_connection.rs  hand.rs  main-fake.rs  main.rs  simulate.rs
hand-pos-server/: main.py  pyproject.toml
